Primeiro Slide carrega primeiro

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,18 @@ body {
     color: #333;
     overflow-x: hidden;
 }
+/* Garantir que primeiro slide carregue imediatamente */
+.slide:first-child {
+    background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-1-compactadas.png?raw=true');
+}
+
+.slide:nth-child(2) {
+    background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-2-compactadas.png?raw=true');
+}
+
+.slide:nth-child(3) {
+    background-image: url('https://github.com/Betioli/Vidracaria-Kibox/blob/main/Imagens/Slide-3-compactadas.png?raw=true');
+}
 
 /* Remover foco visível em elementos interativos */
 button:focus-visible, a:focus-visible {
