--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,13 @@ header h1 {
     overflow: hidden;
 }
 
+.hero {
+    position: relative;
+    height: 70vh;
+    width: 100%;
+    overflow: hidden;
+}
+
 .hero .slide {
     height: 70vh;
     width: 100%;
@@ -204,6 +211,17 @@ header h1 {
     opacity: 1;
     z-index: 2;
 }
+.slide-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: 1;
+}
+
 
 .hero .slide-content {
     position: absolute;
@@ -216,7 +234,9 @@ header h1 {
     animation: slideUp 1s forwards;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
     max-width: 90%;
+    z-index: 2;
 }
+
 
 .slide-content h2,
 .slide-content p {
@@ -224,16 +244,6 @@ header h1 {
 }
 .slide {
     position: relative; /* Slide 1 começa aqui*/
-}
-
-.slide-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 1;
 }
 
 .slide-content {
