--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,7 @@ header h1 {
 }
 
 .hero .slide-content p {
-    font-family: 'RedHatDisplayDisplay';
+    font-family: 'Red Hat Display';
     font-size: clamp(14px, 2.5vw, 20px);
     margin: 0;
 }
@@ -448,7 +448,7 @@ header h1 {
 }
 
 .services p {
-    font-family: 'RedHatDisplayDisplay';
+    font-family: 'Red Hat Display';
     font-size: clamp(16px, 3vw, 18px);
     color: #000000;
     margin: 0 0 40px;
@@ -823,7 +823,7 @@ header h1 {
 }
 
 .footer-grid h3 {
-    font-family: 'CInzel';
+    font-family: 'Cinzel';
     font-size: 20px;
     font-weight: 400;
     color: #FFFFFF;
@@ -1189,7 +1189,7 @@ body {
 }
 
 .footer-grid h3 {
-    font-family: 'CInzel';
+    font-family: 'Cinzel';
 }
 /* ==================== */
 /* VELOCIDADE CARROSSÉIS DESKTOP */
@@ -1226,9 +1226,9 @@ body {
 }
 
 .hero .slide-content p {
-    font-family: 'RedHatDisplayDisplay';
+    font-family: 'Red Hat Display';
 }
 
 .footer-grid h3 {
-    font-family: 'CInzel';
+    font-family: 'Cinzel';
 }
