Versão 2.6 Forma abstrata webp adicionada

--- a/styles.css
+++ b/styles.css
@@ -422,7 +422,7 @@ header h1 {
     width: 375px;
     height: 375px;
 
-    background-image: url('/Imagens/Forma-abstrata.jpg');
+    background-image: url('/Imagens/Forma-abstrata.webp');
     background-size: contain;
     background-repeat: no-repeat;
 
