Versão 2.6 renomeando fonte

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/fonts/Montserrat-regular.woff2') format('woff2');
+  src: url('/fonts/Montserrat-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -32,7 +32,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('/fonts/Montserrat-medium.woff2') format('woff2');
+  src: url('/fonts/Montserrat-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +40,7 @@ body {
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('/fonts/Montserrat-semibold.woff2') format('woff2');
+  src: url('/fonts/Montserrat-Semibold.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +48,7 @@ body {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('/fonts/Montserrat-bold.woff2') format('woff2');
+  src: url('/fonts/Montserrat-Bold.woff2') format('woff2');
 }
 
 /* Baskervville */
